# neuro-ix-tools

./: README.md  cli.py  pyproject.toml  requirements.txt
neuro_ix_tools/: bids.py
neuro_ix_tools/processing/: __init__.py  freesurfer.py  slurm.py
src/: bids.py  config.py
src/commands/: __init__.py  apptainer.py  freesurfer.py
tests/: test_apptainer.py  test_bids.py  test_freesurfer.py
tests/data/apptainer_test/: test_file.txt
