[project]
name = "neuro-ix-tools"
dependencies = [
    "simple-slurm==0.3.5",
    "click==8.1.8",
    "dotenv==0.9.9",
    "rich==14.0.0"
]

[project.optional-dependencies]
test = [
    "ruff==0.11.7",
    "pylint==3.3.6",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "ssort==0.14.0",
    "isort==6.0.1",
    "pydocstyle==6.3.0",
    "pre-commit==4.2.0"
]

deploy = []

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit = [".conda/*"]

[tool.pylint.main]
init-hook = "import sys; sys.path.append('.')"